# oh-hai

./: .gitignore  Cargo.toml  LICENSE  README.md  build  build.sh  install  uninstall
assets/: demo.tape
shell/: key-bindings.bash  key-bindings.nu  key-bindings.zsh
src/: bookmark.rs  config.rs  handle.rs  lib.rs  main.rs  matcher.rs  model.rs  popup.rs  tui.rs  update.rs  view.rs
src/config/: main.rs
src/shell/: key-bindings.bash
