[package]
name = "crabmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
nanoid = "0.4.0"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
tui-textarea = { version = "0.4.0", features = ["search"] }
